small fix with the sprite

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,9 +115,11 @@ import { logbook } from "../content/logbook.js";
       data-shift="false"
       aria-label="Open Ratrak menu"
     >
+	<div class="ratrak-float">
       <div class="ratrak-sprite">
         <img id="ratrakSprite" src="/ratrak/idle.png" width="48" height="48" alt="" />
       </div>
+	</div>
     </button>
 
     <!-- BACKDROP -->
