--- a/src/pages/sk/index.astro
+++ b/src/pages/sk/index.astro
@@ -1,8 +1,8 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro";
-import { projects } from "../../content/projects.js";
-import { teaching } from "../../content/teaching.js";
-import { logbook } from "../../content/logbook.js";
+import { projects } from "../../content/projects-sk.js";
+import { teaching } from "../../content/teaching-sk.js";
+import { logbook } from "../../content/logbook-sk.js";
 ---
 
 <BaseLayout title="ratrak.sk" lang="sk">
@@ -10,7 +10,7 @@ import { logbook } from "../../content/logbook.js";
     <header class="hero">
       <h1>
         Vývoj softvéru.<br />
-        Backend-first, pohon zvedavosťou.
+        Backend-first.
       </h1>
 
       <p class="lead">
