--- a/src/pages/sk/teaching/index.astro
+++ b/src/pages/sk/teaching/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../../../layouts/BaseLayout.astro";
-import { teaching } from "../../../content/teaching.js";
+import { teaching } from "../../../content/teaching-sk.js";
 ---
 
 <BaseLayout title="Výuka — ratrak.sk" lang="sk">
