--- a/src/pages/sk/teaching/index.astro
+++ b/src/pages/sk/teaching/index.astro
@@ -8,7 +8,7 @@ import { teaching } from "../../../content/teaching-sk.js";
     <header class="hero">
       <h1>Výuka</h1>
       <p class="lead">
-        Malé kurzy a workshopy: micro:bit, Python a učenie sa budovaním.
+        Malé kurzy a workshopy: micro:bit, Python a učenie sa hrou.
       </p>
 
       <div class="card">
@@ -60,7 +60,6 @@ import { teaching } from "../../../content/teaching-sk.js";
           <article class="item">
             <p>Zameriavam sa na pochopenie a sebavedomie, nie na rýchle prejdenie syntaxe.</p>
             <p>Budujeme malé projekty, spoločne ladíme a učíme sa klásť dobré otázky.</p>
-            <p>Vyučujem väčšinou deti, ale rád by som vyučoval aj dospelých.</p>
           </article>
         </div>
       </section>
